gegl-xml: Fix serialization of graph nodes that are not meta-ops

https://bugzilla.gnome.org/show_bug.cgi?id=760161